--- a/demo/package.json
+++ b/demo/package.json
@@ -4,15 +4,21 @@
     "description": "",
     "main": "server.ts",
     "scripts": {
-        "start": "tsx src/server.ts"
+        "start": "tsx src/server.ts",
+        "yalc:add": "yalc add @hdriel/whatsapp-socket",
+        "yalc:remove": "tsx remove @hdriel/whatsapp-socket"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
+        "@hdriel/whatsapp-socket": "file:.yalc\\@hdriel\\whatsapp-socket",
+        "dotenv": "^17.2.3",
+        "dotenv-expand": "^12.0.3",
         "express": "^5.2.1",
         "pathe": "^2.0.3",
+        "socket.io": "^4.7.2",
         "stack-trace-logger": "^1.1.2"
     },
     "devDependencies": {
