--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "verbatimModuleSyntax": true,
         "moduleDetection": "force",
         "noEmit": true,
+        "noImplicitAny": false,
 
         /* Linting */
         "strict": true,
