--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     },
     "homepage": "https://github.com/hdriel/whatsapp-socket#readme",
     "dependencies": {
+        "@fadzzzslebew/baileys": "^0.1.1",
         "@whiskeysockets/baileys": "^7.0.0-rc.9",
         "mongodb": "^5.8.1",
         "pino": "^10.1.0",
@@ -56,6 +57,7 @@
         "@types/node": "^20.12.11",
         "@types/qrcode": "^1.5.5",
         "prettier": "^3.7.4",
+        "stack-trace-logger": "^1.1.2",
         "ts-node": "^10.9.2",
         "tslint": "^6.1.3",
         "tsup": "^8.5.0",
