--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "yalc:attach": "cd demo && pnpm add @hdriel/whatsapp-socket"
     },
     "keywords": [
+        "baileys",
         "whatsapp",
         "js-whatsapp",
         "whatsapp-api",
@@ -47,8 +48,6 @@
     "homepage": "https://github.com/hdriel/whatsapp-socket#readme",
     "dependencies": {
         "@fadzzzslebew/baileys": "^0.1.1",
-        "@whiskeysockets/baileys": "^7.0.0-rc.9",
-        "mongodb": "^5.8.1",
         "pino": "^10.1.0",
         "qrcode": "^1.5.3"
     },
@@ -61,6 +60,10 @@
         "ts-node": "^10.9.2",
         "tslint": "^6.1.3",
         "tsup": "^8.5.0",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "mongodb": "^5.8.1"
+    },
+    "peerDependencies": {
+        "mongodb": "^5.8.1"
     }
 }
