--- a/package.json
+++ b/package.json
@@ -48,20 +48,22 @@
     "homepage": "https://github.com/hdriel/whatsapp-socket#readme",
     "dependencies": {
         "@fadzzzslebew/baileys": "^0.1.1",
+        "ms": "^2.1.3",
         "pino": "^10.1.0",
         "qrcode": "^1.5.3"
     },
     "devDependencies": {
         "@hapi/boom": "^10.0.1",
+        "@types/ms": "^2.1.0",
         "@types/node": "^20.12.11",
         "@types/qrcode": "^1.5.5",
+        "mongodb": "^5.8.1",
         "prettier": "^3.7.4",
         "stack-trace-logger": "^1.1.2",
         "ts-node": "^10.9.2",
         "tslint": "^6.1.3",
         "tsup": "^8.5.0",
-        "typescript": "^5.9.2",
-        "mongodb": "^5.8.1"
+        "typescript": "^5.9.2"
     },
     "peerDependencies": {
         "mongodb": "^5.8.1"
