--- a/demo/package.json
+++ b/demo/package.json
@@ -14,15 +14,19 @@
     "type": "commonjs",
     "dependencies": {
         "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
+        "bytes": "^3.1.2",
         "dotenv": "^17.2.3",
         "dotenv-expand": "^12.0.3",
         "express": "^5.2.1",
+        "multer": "^2.0.2",
         "pathe": "^2.0.3",
         "socket.io": "^4.7.2",
         "stack-trace-logger": "^1.1.2"
     },
     "devDependencies": {
+        "@types/bytes": "^3.1.5",
         "@types/express": "^5.0.6",
+        "@types/multer": "^2.0.0",
         "nodemon": "^3.1.11",
         "ts-node": "^10.9.2",
         "tsx": "^4.21.0",
