--- a/demo-server/package.json
+++ b/demo-server/package.json
@@ -13,7 +13,7 @@
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
-        "@hdriel/whatsapp-socket": "^1.0.0",
+        "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
         "bytes": "^3.1.2",
         "dotenv": "^17.2.3",
         "dotenv-expand": "^12.0.3",
