--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -15,6 +15,7 @@
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^7.3.6",
         "@mui/material": "^7.3.6",
+        "mui-simple": "^3.0.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "socket.io-client": "^4.8.1"
