--- a/demo-script/package.json
+++ b/demo-script/package.json
@@ -17,6 +17,7 @@
         "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
         "dotenv": "^17.2.3",
         "dotenv-expand": "^12.0.3",
+        "music-metadata": "^11.10.4",
         "pathe": "^2.0.3",
         "stack-trace-logger": "^1.1.2"
     },
