--- a/demo-script/package.json
+++ b/demo-script/package.json
@@ -22,7 +22,10 @@
         "stack-trace-logger": "^1.1.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.28.5",
+        "@babel/preset-env": "^7.28.5",
         "@types/jest": "^30.0.0",
+        "babel-jest": "^30.2.0",
         "jest": "^30.2.0",
         "ts-jest": "^29.4.6",
         "tsx": "^4.21.0"
