--- a/demo-script/package.json
+++ b/demo-script/package.json
@@ -2,9 +2,10 @@
     "name": "demo-script",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.ts",
     "scripts": {
-        "private:test": "tsx src/private.script.ts",
+        "test:private": "tsx src/private.script.ts",
+        "test:group": "tsx src/group.script.ts",
         "test": "jest",
         "yalc:add": "yalc add @hdriel/whatsapp-socket",
         "yalc:remove": "tsx remove @hdriel/whatsapp-socket"
