--- a/demo-script/tsconfig.json
+++ b/demo-script/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "files": ["src/private.script.ts", "src/__tests__/private.test.ts"],
+    "include": ["src"],
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
