--- a/demo-script/tsconfig.json
+++ b/demo-script/tsconfig.json
@@ -7,7 +7,7 @@
         "outDir": "dist",
         "declaration": true,
         "preserveSymlinks": true,
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "esModuleInterop": true,
         "sourceMap": true,
         "removeComments": true,
