--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
         "ms": "^2.1.3",
         "music-metadata": "7.14.0",
         "pino": "^10.1.0",
-        "qrcode": "^1.5.3",
-        "sharp": "^0.32.6"
+        "qrcode": "^1.5.3"
     },
     "devDependencies": {
         "@hapi/boom": "^10.0.1",
@@ -70,6 +69,7 @@
         "typescript": "^5.9.2"
     },
     "peerDependencies": {
-        "mongodb": "^5.8.1"
+        "mongodb": "^5.8.1",
+        "sharp": "^0.32.6"
     }
 }
