update script for testing

--- a/demo-server/package.json
+++ b/demo-server/package.json
@@ -5,6 +5,7 @@
     "main": "server.ts",
     "scripts": {
         "start": "npm run build && tsx src/server.ts",
+        "server": "tsx src/server.ts",
         "build": "cd ../demo-client && npm run build",
         "dev:client": "cd ../demo-client && npm run dev",
         "dev:server": "tsx src/server.ts",
