--- a/demo-server/package.json
+++ b/demo-server/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
+        "@hdriel/aws-utils": "^1.3.7",
         "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
         "bytes": "^3.1.2",
         "dotenv": "^17.2.3",
