--- a/demo-script/package.json
+++ b/demo-script/package.json
@@ -15,7 +15,7 @@
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
-        "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
+        "@hdriel/whatsapp-socket": "^1.2.6",
         "dotenv": "^17.2.3",
         "dotenv-expand": "^12.0.3",
         "pathe": "^2.0.3",
