--- a/demo-server/package.json
+++ b/demo-server/package.json
@@ -18,7 +18,7 @@
     "type": "commonjs",
     "dependencies": {
         "@hdriel/aws-utils": "^1.3.7",
-        "@hdriel/whatsapp-socket": "1.2.6",
+        "@hdriel/whatsapp-socket": "file:.yalc/@hdriel/whatsapp-socket",
         "bytes": "^3.1.2",
         "dotenv": "^17.2.3",
         "dotenv-expand": "^12.0.3",
